[B][COLOR gold]v4.00.21[/COLOR][/B]
- Fixed unfiltered sources sneaking in pre-emptive results
- Removed unsupported scraper language settings

[B][COLOR gold]v4.00.20[/COLOR][/B]
- Fixed Library source not appearing when "Primal sorting parameter" is set to Premium

[B][COLOR gold]v4.00.19[/COLOR][/B]
- Source info parsing tweaks

[B][COLOR gold]v4.00.18[/COLOR][/B]
- Movie lists cleanup

[B][COLOR gold]v4.00.17[/COLOR][/B]
- Added alternate option to sort source results by Premium primarily and then by resolution
- Other minor changes to source sort/filtering functions

[B][COLOR gold]v4.00.16[/COLOR][/B]
- Stop labeling episode sources as cam/scr quality
- Other internal changes

[B][COLOR gold]v4.00.15[/COLOR][/B]
- Added missing artwork types on episodes lists
- Partial re-arrangement of how TV shows metadata are handled

[B][COLOR gold]v4.00.14[/COLOR][/B]
- Local language artwork fixes

[B][COLOR gold]v4.00.13[/COLOR][/B]
- Fixed issue with personal Trakt lists failing to load if sorted by release date
    and some list item(s) has no release date on Trakt database
- Other minor fixes

[B][COLOR gold]v4.00.12[/COLOR][/B]
- Fixed Trakt episodes history thumbnails
- Fixed issues with log viewing/uploading

[B][COLOR gold]v4.00.11[/COLOR][/B]
- Fixed de-accent scraping title in Kodi 19

[B][COLOR gold]v4.00.10[/COLOR][/B]
- Make sure we always use English TV show title for scraping

[B][COLOR gold]v4.00.08-9[/COLOR][/B]
- Added logging functions (on Tools menu):
    View add-on's log
    Upload add-on's log to a paste website, for easier debugging
    Empty log
- Other logging changes

[B][COLOR gold]v4.00.07[/COLOR][/B]
- Tweaked title query for scraping

[B][COLOR gold]v4.00.05-6[/COLOR][/B]
- Fixed setting Viewtypes
- Fixed issues with some episodes listings
- Some more code cleanup

[B][COLOR gold]v4.00.03-4[/COLOR][/B]
- Withdraw uncached torrents from autoplay
- Fixed issue where local (translated) TV show title would pass for scraping
- Code cleanup
